# rust-onvm-v2

./: .gitmodules  Cargo.toml  Makefile  README.md
capsule/: Cargo.toml
capsule-ffi/: build.rs
capsule-ffi/src/: bindings.h  shim.c
capsule/src/: lib.rs
capsule/src/dpdk/: kni.rs  mbuf.rs  mempool.rs  mod.rs  port.rs  stats.rs
onvm_mgr/: Cargo.toml
onvm_mgr/src/: error_handling.rs  lib.rs
onvm_mgr/src/mgr/: constants.rs  get_args.rs  global.rs  init.rs  mod.rs  net_funcs.rs
onvm_mgr/src/nflib/: common.rs  constants.rs  funcs_macros.rs  mod.rs  msg_common.rs  structs.rs  threading.rs
onvm_mgr_test/: Cargo.toml
onvm_mgr_test/src/: main.rs
