[package]
name = "onvm_mgr"
version = "0.1.0"
authors = ["ratnadeepb"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fragile = "1.0.0"
bit_field = "0.10.1"
failure = "0.1.8"
exitfailure = "0.5.1"
capsule-ffi = {path = "../capsule-ffi"}
# capsule-ffi = "0.1.4"
lazy_static = "1.4.0"
getopts = "0.2.21"